Polish Phase 1 docs: advanced-configuration, android-junit4, ktor
Reduced verbosity by 30-45% while maintaining technical accuracy.

Changes:
- advanced-configuration.md (635→373 lines, -41%)
  - Removed entire Performance section (link to jvmti-loading.md)
  - Reduced configuration patterns from 4 to 3
  - Condensed priority order and default blocking mode examples

- android-junit4.md (542→314 lines, -42%)
  - Trimmed verbose "Why Robolectric?" section
  - Removed HTTP client examples (link to client guides)
  - Removed Repository Pattern example
  - Condensed JUnit 5 and Instrumentation Tests sections

- ktor.md (525→340 lines, -35%)
  - Consolidated engine-specific examples
  - Condensed KMP expect/actual pattern
  - Removed Android/Robolectric section (duplicates setup guide)
  - Removed MockWebServer integration (out of scope)

All docs now follow succinct, value-first style from README.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>